--- a/deployments/mosquitto-deployment.yaml
+++ b/deployments/mosquitto-deployment.yaml
@@ -4,7 +4,6 @@ metadata:
   annotations:
     kompose.cmd: kompose convert
     kompose.version: 1.21.0 (992df58d8)
-  creationTimestamp: null
   labels:
     io.kompose.service: mosquitto
   name: mosquitto
@@ -13,24 +12,26 @@ spec:
   selector:
     matchLabels:
       io.kompose.service: mosquitto
-  strategy: {}
   template:
     metadata:
       annotations:
         kompose.cmd: kompose convert
         kompose.version: 1.21.0 (992df58d8)
-      creationTimestamp: null
       labels:
         io.kompose.service: mosquitto
     spec:
       containers:
       - image: eclipse-mosquitto
-        imagePullPolicy: ""
         name: mosquitto
         ports:
         - containerPort: 1883
-        resources: {}
+        volumeMounts:
+        - name: mosquitto-config-volume
+          mountPath: /mosquitto/config/mosquitto.conf
+          subPath: mosquitto.conf
       restartPolicy: Always
-      serviceAccountName: ""
-      volumes: null
-status: {}
+      volumes:
+      - name: mosquitto-config-volume
+        configMap:
+          name: mosquitto-config
+
