--- a/obsolete/chirpstack-gateway-bridge-service.yaml
+++ b/obsolete/chirpstack-gateway-bridge-service.yaml
@@ -3,15 +3,20 @@ kind: Service
 metadata:
   annotations:
     kompose.cmd: kompose convert
-    kompose.version: 1.34.0 (cbf2835db)
+    kompose.version: 1.21.0 (992df58d8)
+  creationTimestamp: null
   labels:
     io.kompose.service: chirpstack-gateway-bridge
   name: chirpstack-gateway-bridge
 spec:
+  type: LoadBalancer
   ports:
-    - name: "1700"
-      port: 1700
-      protocol: UDP
-      targetPort: 1700
+  - name: "1701"
+    port: 1701
+    protocol: UDP
+    targetPort: 1700
+    nodePort: 30002
   selector:
     io.kompose.service: chirpstack-gateway-bridge
+status:
+  loadBalancer: {}
