--- a/deployments/chirpstack-gateway-bridge-deployment.yaml
+++ b/deployments/chirpstack-gateway-bridge-deployment.yaml
@@ -3,8 +3,7 @@ kind: Deployment
 metadata:
   annotations:
     kompose.cmd: kompose convert
-    kompose.version: 1.21.0 (992df58d8)
-  creationTimestamp: null
+    kompose.version: 1.34.0 (cbf2835db)
   labels:
     io.kompose.service: chirpstack-gateway-bridge
   name: chirpstack-gateway-bridge
@@ -13,30 +12,36 @@ spec:
   selector:
     matchLabels:
       io.kompose.service: chirpstack-gateway-bridge
-  strategy: {}
+  strategy:
+    type: Recreate
   template:
     metadata:
       annotations:
         kompose.cmd: kompose convert
-        kompose.version: 1.21.0 (992df58d8)
-      creationTimestamp: null
+        kompose.version: 1.34.0 (cbf2835db)
       labels:
         io.kompose.service: chirpstack-gateway-bridge
     spec:
       containers:
-      - image: chirpstack/chirpstack-gateway-bridge:3
-        imagePullPolicy: ""
-        name: chirpstack-gateway-bridge
-        ports:
-        - containerPort: 1700
-          protocol: UDP
-        volumeMounts:
-          - name: config-gateway-bridge-cm
-            mountPath: /etc/chirpstack-gateway-bridge
-          
+        - env:
+            - name: INTEGRATION__MQTT__COMMAND_TOPIC_TEMPLATE
+              value: us915_0/gateway/{{ .GatewayID }}/command/#
+            - name: INTEGRATION__MQTT__EVENT_TOPIC_TEMPLATE
+              value: us915_0/gateway/{{ .GatewayID }}/event/{{ .EventType }}
+            - name: INTEGRATION__MQTT__STATE_TOPIC_TEMPLATE
+              value: us915_0/gateway/{{ .GatewayID }}/state/{{ .StateType }}
+            - name: TZ
+              value: America/New_York
+          image: chirpstack/chirpstack-gateway-bridge:4
+          name: chirpstack-gateway-bridge
+          ports:
+            - containerPort: 1700
+              protocol: UDP
+          volumeMounts:
+            - mountPath: /etc/chirpstack-gateway-bridge
+              name: chirpstack-gateway-bridge-cm0
       restartPolicy: Always
-    
       volumes:
-          - name: config-gateway-bridge-cm
-            configMap:
-                name: config-gateway-bridge
+        - configMap:
+            name: chirpstack-gateway-bridge-cm0
+          name: chirpstack-gateway-bridge-cm0
