--- a/deployments/node-red-deployment.yaml
+++ b/deployments/node-red-deployment.yaml
@@ -5,13 +5,13 @@ metadata:
     kompose.cmd: kompose convert
     kompose.version: 1.34.0 (cbf2835db)
   labels:
-    io.kompose.service: mosquitto
-  name: mosquitto
+    io.kompose.service: node-red
+  name: node-red
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: mosquitto
+      io.kompose.service: node-red
   strategy:
     type: Recreate
   template:
@@ -20,19 +20,24 @@ spec:
         kompose.cmd: kompose convert
         kompose.version: 1.34.0 (cbf2835db)
       labels:
-        io.kompose.service: mosquitto
+        io.kompose.service: node-red
     spec:
       containers:
-        - image: eclipse-mosquitto:2
-          name: mosquitto
+        - env:
+            - name: NODE_RED_ENABLE_PROJECTS
+              value: "true"
+            - name: TZ
+              value: America/New_York
+          image: nodered/node-red:latest
+          name: node-red
           ports:
-            - containerPort: 1883
+            - containerPort: 1880
               protocol: TCP
           volumeMounts:
-            - mountPath: /mosquitto/config
-              name: mosquitto-cm0
+            - mountPath: /data
+              name: node-red-cm0
       restartPolicy: Always
       volumes:
         - configMap:
-            name: mosquitto-cm0
-          name: mosquitto-cm0
+            name: node-red-cm0
+          name: node-red-cm0
