--- a/obsolete/mosquitto-service.yaml
+++ b/obsolete/mosquitto-service.yaml
@@ -3,15 +3,16 @@ kind: Service
 metadata:
   annotations:
     kompose.cmd: kompose convert
-    kompose.version: 1.34.0 (cbf2835db)
+    kompose.version: 1.21.0 (992df58d8)
+  creationTimestamp: null
   labels:
     io.kompose.service: mosquitto
   name: mosquitto
 spec:
   ports:
-    - name: "1883"
-      port: 1883
-      targetPort: 1883
+  - name: "1883"
+    port: 1883
+    targetPort: 1883
   selector:
     io.kompose.service: mosquitto
 status:
