--- a/obsolete/postgresqldata-persistentvolumeclaim.yaml
+++ b/obsolete/postgresqldata-persistentvolumeclaim.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  creationTimestamp: null
   labels:
-    io.kompose.service: redisdata
-  name: redisdata
+    io.kompose.service: postgresqldata
+  name: postgresqldata
 spec:
   accessModes:
-    - ReadWriteOnce
+  - ReadWriteOnce
   resources:
     requests:
       storage: 100Mi
+status: {}
