--- a/obsolete/redisdata-persistentvolumeclaim.yaml
+++ b/obsolete/redisdata-persistentvolumeclaim.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  creationTimestamp: null
   labels:
     io.kompose.service: redisdata
   name: redisdata
 spec:
   accessModes:
-    - ReadWriteOnce
+  - ReadWriteOnce
   resources:
     requests:
       storage: 100Mi
+status: {}
