--- a/volumes/chirpstack-claim1-persistentvolumeclaim.yaml
+++ b/volumes/chirpstack-claim1-persistentvolumeclaim.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   labels:
-    io.kompose.service: redisdata
-  name: redisdata
+    io.kompose.service: chirpstack-claim1
+  name: chirpstack-claim1
 spec:
   accessModes:
     - ReadWriteOnce
