trying to fix pvc again

--- a/deployments/postgres-deployment.yaml
+++ b/deployments/postgres-deployment.yaml
@@ -33,16 +33,20 @@ spec:
           volumeMounts:
             - mountPath: /docker-entrypoint-initdb.d
               name: postgres-cm0
-              readOnly: false
+              readOnly: true
             - mountPath: /var/lib/postgresql/data
-              name: postgres-cm1
-              readOnly: false
+              name: postgresqldata
+            - mountPath: /etc/postgresql
+              name: config-postgres
+              readOnly: true
       restartPolicy: Always
       volumes:
-      - name: postgresqldata
-        persistentVolumeClaim:
-          claimName: postgresqldata
-  
-      - name: config-postgres-cm
-        configMap:
-            name: config-postgres
+        - name: postgresqldata
+          persistentVolumeClaim:
+            claimName: postgresqldata
+        - name: postgres-cm0
+          configMap:
+            name: postgres-cm0
+        - name: config-postgres
+          configMap:
+            name: postgres-cm1
