--- a/deployments/postgres-deployment.yaml
+++ b/deployments/postgres-deployment.yaml
@@ -28,7 +28,7 @@ spec:
           command: ['sh', '-c', 'rm -rf /var/lib/postgresql/data/*']
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
-              name: postgres-cm1
+              name: postgresqldata
       containers:
         - env:
             - name: POSTGRES_PASSWORD
@@ -40,15 +40,20 @@ spec:
           volumeMounts:
             - mountPath: /docker-entrypoint-initdb.d
               name: postgres-cm0
-              readOnly: false
+              readOnly: true
             - mountPath: /var/lib/postgresql/data
-              name: postgres-cm1
-              readOnly: false
+              name: postgresqldata
+            - mountPath: /etc/postgresql
+              name: config-postgres
+              readOnly: true
       restartPolicy: Always
       volumes:
-      - name: postgres-cm1
-        persistentVolumeClaim:
-          claimName: postgresqldata
-      - name: postgres-cm0
-        configMap:
-          name: config-postgres
+        - name: postgresqldata
+          persistentVolumeClaim:
+            claimName: postgresqldata
+        - name: postgres-cm0
+          configMap:
+            name: postgres-cm0
+        - name: config-postgres
+          configMap:
+            name: postgres-cm1
