--- a/deployments/postgres-deployment.yaml
+++ b/deployments/postgres-deployment.yaml
@@ -5,13 +5,13 @@ metadata:
     kompose.cmd: kompose convert
     kompose.version: 1.34.0 (cbf2835db)
   labels:
-    io.kompose.service: postgres
+    io.kompose.service: postgresql
   name: postgres
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: postgres
+      io.kompose.service: postgresql
   strategy:
     type: Recreate
   template:
@@ -20,7 +20,7 @@ spec:
         kompose.cmd: kompose convert
         kompose.version: 1.34.0 (cbf2835db)
       labels:
-        io.kompose.service: postgres
+        io.kompose.service: postgresql
     spec:
       initContainers:
         - name: init-postgres
