fixes name resolution for chirpstck postgres

--- a/deployments/chirpstack-deployment.yaml
+++ b/deployments/chirpstack-deployment.yaml
@@ -30,7 +30,7 @@ spec:
             - name: MQTT_BROKER_HOST
               value: mosquitto
             - name: POSTGRESQL_HOST
-              value: postgres
+              value: postgresql
             - name: REDIS_HOST
               value: redis
           image: chirpstack/chirpstack:4
