Adds static ip to chirpstack instance

--- a/services/node-red-service.yaml
+++ b/services/node-red-service.yaml
@@ -8,6 +8,7 @@ metadata:
     io.kompose.service: node-red
   name: node-red
 spec:
+  type: LoadBalancer
   ports:
     - name: "1880"
       port: 1880
