--- a/deployments/node-red-deployment.yaml
+++ b/deployments/node-red-deployment.yaml
@@ -22,6 +22,13 @@ spec:
       labels:
         io.kompose.service: node-red
     spec:
+      initContainers:
+        - name: fix-permissions
+          image: busybox
+          command: ["sh", "-c", "chmod -R 777 /data"]
+          volumeMounts:
+            - mountPath: /data
+              name: node-red-data
       containers:
         - env:
             - name: NODE_RED_ENABLE_PROJECTS
