--- a/deployments/node-red-deployment.yaml
+++ b/deployments/node-red-deployment.yaml
@@ -35,6 +35,8 @@ spec:
               value: "true"
             - name: TZ
               value: America/New_York
+            - name: NODE_RED_IP
+              value: "0.0.0.0"
           image: nodered/node-red:latest
           name: node-red
           ports:
