Binds node red ui to all external addresses

--- a/deployments/node-red-deployment.yaml
+++ b/deployments/node-red-deployment.yaml
@@ -37,6 +37,8 @@ spec:
               value: America/New_York
             - name: NODE_RED_IP
               value: "0.0.0.0"
+            - name: uiHost
+              value: "0.0.0.0"  
           image: nodered/node-red:latest
           name: node-red
           ports:
