Nother change to bind to 0.0.0.0

--- a/deployments/node-red-deployment.yaml
+++ b/deployments/node-red-deployment.yaml
@@ -38,7 +38,7 @@ spec:
             - name: NODE_RED_IP
               value: "0.0.0.0"
             - name: uiHost
-              value: "0.0.0.0"  
+              value: 0.0.0.0  
           image: nodered/node-red:latest
           name: node-red
           ports:
