fixed postgres config map to point at the correct services

--- a/config-maps/postgres-cm0-configmap.yaml
+++ b/config-maps/postgres-cm0-configmap.yaml
@@ -19,5 +19,5 @@ data:
 kind: ConfigMap
 metadata:
   labels:
-    io.kompose.service: postgres
+    io.kompose.service: postgresql
   name: postgres-cm0
