--- a/config-maps/postgres-cm1-configmap.yaml
+++ b/config-maps/postgres-cm1-configmap.yaml
@@ -952,5 +952,5 @@ data:
 kind: ConfigMap
 metadata:
   labels:
-    io.kompose.service: postgres
+    io.kompose.service: postgresql
   name: postgres-cm1
