Updates chirpstack restapi deployment to use local cluster dns for chirpstack

--- a/deployments/chirpstack-rest-api-deployment.yaml
+++ b/deployments/chirpstack-rest-api-deployment.yaml
@@ -21,12 +21,12 @@ spec:
         io.kompose.service: chirpstack-rest-api
     spec:
       containers:
-        - args:
-            - --server
-            - chirpstack:8080
-            - --bind
-            - 0.0.0.0:8090
-            - --insecure
+        args:
+          - --server
+          - chirpstack.default.svc.cluster.local:8080
+          - --bind
+          - 0.0.0.0:8090
+          - --insecure
           image: chirpstack/chirpstack-rest-api:4
           name: chirpstack-rest-api
           ports:
