adds static Ip for chirpstack gateway bridge

--- a/services/chirpstack-gateway-bridge-service.yaml
+++ b/services/chirpstack-gateway-bridge-service.yaml
@@ -9,6 +9,7 @@ metadata:
   name: chirpstack-gateway-bridge
 spec:
   type: LoadBalancer
+  loadBalancerIP: 74.179.219.221
   ports:
     - name: "1700"
       port: 1700
