--- a/deployments/chirpstack-rest-api-deployment.yaml
+++ b/deployments/chirpstack-rest-api-deployment.yaml
@@ -21,14 +21,14 @@ spec:
         io.kompose.service: chirpstack-rest-api
     spec:
       containers:
-        args:
-          - --server
-          - chirpstack.default.svc.cluster.local:8080
-          - --bind
-          - 0.0.0.0:8090
-          - --insecure
+        - name: chirpstack-rest-api
           image: chirpstack/chirpstack-rest-api:4
-          name: chirpstack-rest-api
+          args:
+            - --server
+            - chirpstack:8080
+            - --bind
+            - 0.0.0.0:8090
+            - --insecure
           ports:
             - containerPort: 8090
               protocol: TCP
