--- a/deployments/chirpstack-deployment.yaml
+++ b/deployments/chirpstack-deployment.yaml
@@ -28,11 +28,11 @@ spec:
             - /etc/chirpstack
           env:
             - name: MQTT_BROKER_HOST
-              value: mosquitto
+              value: mosquitto.default.svc.cluster.local
             - name: POSTGRESQL_HOST
-              value: postgresql
+              value: postgresql.default.svc.cluster.local
             - name: REDIS_HOST
-              value: redis
+              value: redis.default.svc.cluster.local
           image: chirpstack/chirpstack:4
           name: chirpstack
           ports:
