--- a/deployments/chirpstack-rest-api-deployment.yaml
+++ b/deployments/chirpstack-rest-api-deployment.yaml
@@ -25,7 +25,7 @@ spec:
           image: chirpstack/chirpstack-rest-api:4
           args:
             - --server
-            - 4.157.230.39:8080
+            - chirpstack.default.svc.cluster.local:8080
             - --bind
             - 0.0.0.0:8090
             - --insecure
