--- a/config-maps/chirpstack-cm0-configmap.yaml
+++ b/config-maps/chirpstack-cm0-configmap.yaml
@@ -7,7 +7,7 @@ data:
       # Log level.
       #
       # Options are: trace, debug, info, warn error.
-      level="info"
+      level="trace"
 
 
     # PostgreSQL configuration.
