--- a/deployments/postgres-deployment.yaml
+++ b/deployments/postgres-deployment.yaml
@@ -6,7 +6,7 @@ metadata:
     kompose.version: 1.34.0 (cbf2835db)
   labels:
     io.kompose.service: postgresql
-  name: postgres
+  name: postgresql
 spec:
   replicas: 1
   selector:
@@ -36,7 +36,7 @@ spec:
             - name: TZ
               value: America/New_York
           image: postgres:14-alpine
-          name: postgres
+          name: postgresql
           volumeMounts:
             - mountPath: /docker-entrypoint-initdb.d
               name: postgres-cm0
