--- a/config-maps/chirpstack-cm0-configmap.yaml
+++ b/config-maps/chirpstack-cm0-configmap.yaml
@@ -44,7 +44,7 @@ data:
       #
       # Set multiple addresses when connecting to a cluster.
       servers=[
-        "redis://$REDIS_HOST/",
+        "redis://redis/",
       ]
 
       # TLS enabled.
