--- a/volumes/postgresqldata-persistentvolume.yaml
+++ b/volumes/postgresqldata-persistentvolume.yaml
@@ -4,7 +4,7 @@ metadata:
   name: us-chirpstack-postgres-pv
 spec:
   capacity:
-    storage: 1Gi
+    storage: 10Gi
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
@@ -14,5 +14,6 @@ spec:
     readOnly: false
     volumeAttributes:
       storageAccount: usiotreportingdev
-  secretRef:
-    name: azure-file-secret
+    readOnly: false
+    nodeStageSecretRef:
+      name: azure-file-secret
