--- a/volumes/postgresqldata-persistentvolumeclaim.yaml
+++ b/volumes/postgresqldata-persistentvolumeclaim.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: us-chirpstack-postgres-pvc
+  name: postgresqldata
+  namespace: default
 spec:
   accessModes:
     - ReadWriteMany
