Adde3d resource group name to volume handle for postgres file share in pv yaml

--- a/volumes/postgresqldata-persistentvolume.yaml
+++ b/volumes/postgresqldata-persistentvolume.yaml
@@ -11,7 +11,7 @@ spec:
   storageClassName: default
   csi:
     driver: file.csi.azure.com
-    volumeHandle: usiotreportingdev#us-chirpstack-postgres-data
+    volumeHandle: PowerPlatform-IOTReporting-dev#usiotreportingdev#us-chirpstack-postgres-data
     volumeAttributes:
       storageAccount: usiotreportingdev
     readOnly: false
