Adds permissions for persistent volume

--- a/volumes/postgresqldata-persistentvolume.yaml
+++ b/volumes/postgresqldata-persistentvolume.yaml
@@ -18,3 +18,10 @@ spec:
     nodeStageSecretRef:
       name: azure-file-secret
       namespace: default
+  mountOptions:
+    - dir_mode=0777
+    - file_mode=0777
+    - uid=0
+    - gid=0
+    - mfsymlinks
+    - cache=strict
