--- a/deployments/postgres-deployment.yaml
+++ b/deployments/postgres-deployment.yaml
@@ -29,7 +29,7 @@ spec:
           image: busybox
           securityContext:
             runAsUser: 0
-          command: ['sh', '-c', 'chown -R 999:999 /var/lib/postgresql/data && chmod -R 0700 /var/lib/postgresql/data']
+          command: ['sh', '-c', 'chown -R 999:999 /var/lib/postgresql/data && chmod -R 0700 /var/lib/postgresql/data && ls -l /var/lib/postgresql/data']
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
               name: postgresqldata
