--- a/deployments/postgres-deployment.yaml
+++ b/deployments/postgres-deployment.yaml
@@ -26,13 +26,12 @@ spec:
         fsGroup: 999
       initContainers:
         - name: init-postgres
-          image: alpine:latest
+          image: busybox:latest
           securityContext:
             runAsUser: 0
           command: [
             'sh', '-c',
             'echo "Cleaning up /var/lib/postgresql/data"; \
-            apk add --no-cache coreutils util-linux; \
             rm -rf /var/lib/postgresql/data/*; \
             find /var/lib/postgresql/data/ -mindepth 1 -delete; \
             mkdir -p /var/lib/postgresql/data; \
