--- a/deployments/postgres-deployment.yaml
+++ b/deployments/postgres-deployment.yaml
@@ -26,17 +26,22 @@ spec:
         fsGroup: 999
       initContainers:
         - name: init-postgres
-          image: busybox:latest
+          image: alpine:latest
           securityContext:
             runAsUser: 0
-          command: [
-            'sh', '-c',
-            'echo "Cleaning up /var/lib/postgresql/data"; \
-            rm -rf /var/lib/postgresql/data/*; \
-            find /var/lib/postgresql/data/ -mindepth 1 -delete; \
-            mkdir -p /var/lib/postgresql/data; \
-            chown -R 999:999 /var/lib/postgresql/data'
-          ]
+          command:
+            - sh
+            - -c
+            - |
+                echo "Installing utilities..."
+                apk add --no-cache coreutils && \
+                echo "Cleaning up /var/lib/postgresql/data..." && \
+                rm -rf /var/lib/postgresql/data/* && \
+                find /var/lib/postgresql/data/ -mindepth 1 -delete && \
+                mkdir -p /var/lib/postgresql/data && \
+                echo "Changing ownership to 999:999..." && \
+                chown -R 999:999 /var/lib/postgresql/data && \
+                echo "Initialization complete."
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
               name: postgresqldata
