--- a/deployments/postgres-deployment.yaml
+++ b/deployments/postgres-deployment.yaml
@@ -45,10 +45,6 @@ spec:
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
               name: postgresqldata
-            - mountPath: /docker-entrypoint-initdb.d
-              name: postgresqldata
-            - mountPath: /etc/postgresql
-              name: postgresqldata
       containers:
         - env:
             - name: POSTGRES_PASSWORD
@@ -62,16 +58,22 @@ spec:
             runAsGroup: 999
             allowPrivilegeEscalation: false
           volumeMounts:
-            - mountPath: /docker-entrypoint-initdb.d
-              name: postgresqldata
-              readOnly: true
             - mountPath: /var/lib/postgresql/data
               name: postgresqldata
+            - mountPath: /docker-entrypoint-initdb.d
+              name: postgres-cm0
+              readOnly: true
             - mountPath: /etc/postgresql
-              name: postgresqldata
+              name: config-postgres
               readOnly: true
       restartPolicy: Always
       volumes:
         - name: postgresqldata
           persistentVolumeClaim:
             claimName: postgresqldata
+        - name: postgres-cm0
+          configMap:
+            name: postgres-cm0
+        - name: config-postgres
+          configMap:
+            name: config-postgres
