New persistent volume claim

--- a/volumes/postgresqldata-persistentvolumeclaim.yaml
+++ b/volumes/postgresqldata-persistentvolumeclaim.yaml
@@ -8,5 +8,5 @@ spec:
   resources:
     requests:
       storage: 1Gi
-  volumeMode: Filesystem
   storageClassName: default
+  volumeName: us-chirpstack-postgres-pv
