--- a/deployments/postgres-deployment.yaml
+++ b/deployments/postgres-deployment.yaml
@@ -38,12 +38,13 @@ spec:
                 echo "Cleaning up /var/lib/postgresql/data..." && \
                 rm -rf /var/lib/postgresql/data/* && \
                 find /var/lib/postgresql/data/ -mindepth 1 -delete && \
-                mkdir -p /var/lib/postgresql/data && \
-                echo "Changing ownership to postgres:postgres (999:999)..." && \
-                chown -R 999:999 /var/lib/postgresql/data && \
+                mkdir -p /var/lib/postgresql/data/pg_wal && \
+                echo "Changing ownership to 0750:0750..." && \
+                chown -R 0750:0750 /var/lib/postgresql/data && \
+                chown -R 0750:0750 /var/lib/postgresql/data/pg_wal && \
                 echo "Fixing /var/run/postgresql permissions..." && \
                 mkdir -p /var/run/postgresql && \
-                chown -R 999:999 /var/run/postgresql && \
+                chown -R 0750:0750 /var/run/postgresql && \
                 echo "Initialization complete."
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
