--- a/deployments/postgres-deployment.yaml
+++ b/deployments/postgres-deployment.yaml
@@ -1,90 +1,26 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Pod
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.34.0 (cbf2835db)
-  labels:
-    io.kompose.service: postgresql
   name: postgresql
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      io.kompose.service: postgresql
-  strategy:
-    type: Recreate
-  template:
-    metadata:
-      annotations:
-        kompose.cmd: kompose convert
-        kompose.version: 1.34.0 (cbf2835db)
-      labels:
-        io.kompose.service: postgresql
-    spec:
-      securityContext:
-        fsGroup: 999
-      initContainers:
-        - name: init-postgres
-          image: alpine:latest
-          securityContext:
-            runAsUser: 0
-          command:
-            - sh
-            - -c
-            - |
-                echo "Installing utilities..."
-                apk add --no-cache coreutils && \
-                echo "Cleaning up /var/lib/postgresql/data..." && \
-                rm -rf /var/lib/postgresql/data/* && \
-                rm -rf /var/lib/postgresql/data/.* && \
-                find /var/lib/postgresql/data -mindepth 1 -exec rm -rf {} \; && \
-                mkdir -p /var/lib/postgresql/data/pg_wal && \
-                echo "Changing ownership to 0750:0750..." && \
-                chown -R 0750:0750 /var/lib/postgresql/data && \
-                chown -R 0750:0750 /var/lib/postgresql/data/pg_wal && \
-                echo "Fixing /var/run/postgresql permissions..." && \
-                mkdir -p /var/run/postgresql && \
-                chown -R 0750:0750 /var/run/postgresql && \
-                echo "Initialization complete."
-          volumeMounts:
-            - mountPath: /var/lib/postgresql/data
-              name: postgresqldata
-            - mountPath: /var/run/postgresql
-              name: postgresql-run
-      containers:
-        - name: postgresql
-          image: postgres:14-alpine
-          env:
-            - name: POSTGRES_PASSWORD
-              value: root
-            - name: TZ
-              value: America/New_York
-          securityContext:
-            runAsUser: 999
-            runAsGroup: 999
-            allowPrivilegeEscalation: false
-          volumeMounts:
-            - mountPath: /var/lib/postgresql/data
-              name: postgresqldata
-            - mountPath: /docker-entrypoint-initdb.d
-              name: postgres-cm0
-              readOnly: true
-            - mountPath: /etc/postgresql
-              name: config-postgres
-              readOnly: true
-            - mountPath: /var/run/postgresql
-              name: postgresql-run
-      restartPolicy: Always
-      volumes:
-        - name: postgresqldata
-          persistentVolumeClaim:
-            claimName: postgresqldata
-        - name: postgres-cm0
-          configMap:
-            name: postgres-cm0
-        - name: config-postgres
-          configMap:
-            name: postgres-cm1
-        - name: postgresql-run
-          emptyDir: {}
+  nodeSelector:
+    kubernetes.io/os: linux
+  containers:
+    - name: postgresql
+      image: postgres:14-alpine
+      env:
+        - name: POSTGRES_PASSWORD
+          value: root
+        - name: TZ
+          value: America/New_York
+      volumeMounts:
+        - mountPath: /var/lib/postgresql/data
+          name: postgresqldata
+        - mountPath: /var/run/postgresql
+          name: postgresql-run
+  volumes:
+    - name: postgresqldata
+      persistentVolumeClaim:
+        claimName: postgresqldata
+    - name: postgresql-run
+      emptyDir: {}
