--- a/deployments/postgres-deployment.yaml
+++ b/deployments/postgres-deployment.yaml
@@ -1,26 +1,37 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: postgresql
 spec:
-  nodeSelector:
-    kubernetes.io/os: linux
-  containers:
-    - name: postgresql
-      image: postgres:14-alpine
-      env:
-        - name: POSTGRES_PASSWORD
-          value: root
-        - name: TZ
-          value: America/New_York
-      volumeMounts:
-        - mountPath: /var/lib/postgresql/data
-          name: postgresqldata
-        - mountPath: /var/run/postgresql
-          name: postgresql-run
-  volumes:
-    - name: postgresqldata
-      persistentVolumeClaim:
-        claimName: postgresqldata
-    - name: postgresql-run
-      emptyDir: {}
+  replicas: 1
+  selector:
+    matchLabels:
+      app: postgresql
+  strategy:
+    type: Recreate
+  template:
+    metadata:
+      labels:
+        app: postgresql
+    spec:
+      nodeSelector:
+        kubernetes.io/os: linux
+      containers:
+        - name: postgresql
+          image: postgres:14-alpine
+          env:
+            - name: POSTGRES_PASSWORD
+              value: root
+            - name: TZ
+              value: America/New_York
+          volumeMounts:
+            - mountPath: /var/lib/postgresql/data
+              name: postgresqldata
+            - mountPath: /var/run/postgresql
+              name: postgresql-run
+      volumes:
+        - name: postgresqldata
+          persistentVolumeClaim:
+            claimName: postgresqldata
+        - name: postgresql-run
+          emptyDir: {}
