--- a/deployments/postgres-deployment.yaml
+++ b/deployments/postgres-deployment.yaml
@@ -26,13 +26,12 @@ spec:
             - -c
             - |
                 echo "Fixing permissions..."
-                chown -R 999:999 /var/lib/postgresql/data
-                chmod -R 700 /var/lib/postgresql/data
+                chmod -R 0750 /mnt/azure
           securityContext:
-            runAsUser:
+            runAsUser: 0
           volumeMounts:
-            - mountPath: /var/lib/postgresql/data
-              name: postgresqldata
+            - mountPath: /mnt/azure
+              name: azurefile
       containers:
         - name: postgresql
           image: postgres:14-alpine
@@ -42,13 +41,13 @@ spec:
             - name: TZ
               value: America/New_York
           volumeMounts:
-            - mountPath: /var/lib/postgresql/data
-              name: postgresqldata
+            - mountPath: /mnt/azure
+              name: azurefile
             - mountPath: /var/run/postgresql
               name: postgresql-run
       volumes:
-        - name: postgresqldata
+        - name: azurefile
           persistentVolumeClaim:
-            claimName: postgresqldata
+            claimName: azurefile
         - name: postgresql-run
           emptyDir: {}
