--- a/volumes/postgresqldata-persistentvolume.yaml
+++ b/volumes/postgresqldata-persistentvolume.yaml
@@ -1,29 +1,29 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: us-chirpstack-postgres-pv
+  name: azurefile
+  annotations:
+    pv.kubernetes.io/provisioned-by: file.csi.azure.com
 spec:
   capacity:
     storage: 1Gi
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
   storageClassName: default
   csi:
     driver: file.csi.azure.com
     volumeHandle: "PowerPlatform-IOTReporting-dev#usiotreportingdev#us-chirpstack-postgres-data"
     volumeAttributes:
-      storageAccount: usiotreportingdev
-      shareName: us-chirpstack-postgres-data
-    readOnly: false
+      shareName: 
     nodeStageSecretRef:
       name: azure-file-secret
       namespace: default
   mountOptions:
-    - dir_mode=0750
-    - file_mode=0750
-    - uid=999
-    - gid=999
+    - dir_mode=0777
+    - file_mode=0777
+    - uid=0
+    - gid=0
     - mfsymlinks
     - cache=strict
     - nosharesock
