--- a/deployments/postgres-deployment.yaml
+++ b/deployments/postgres-deployment.yaml
@@ -6,18 +6,38 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: postgresql
-  strategy:
-    type: Recreate
+      io.kompose.service: postgresql
   template:
     metadata:
       labels:
-        app: postgresql
+        io.kompose.service: postgresql
     spec:
-      nodeSelector:
-        kubernetes.io/os: linux
       securityContext:
         fsGroup: 999
+      initContainers:
+        - name: init-postgres
+          image: alpine:latest
+          securityContext:
+            runAsUser: 0
+          command:
+            - sh
+            - -c
+            - |
+                echo "Cleaning up /var/lib/postgresql/data..."
+                rm -rf /var/lib/postgresql/data/* && \
+                mkdir -p /var/lib/postgresql/data && \
+                chown -R 999:999 /var/lib/postgresql/data && \
+                chmod 700 /var/lib/postgresql/data && \
+                echo "Cleaning up /var/run/postgresql..."
+                mkdir -p /var/run/postgresql && \
+                chown -R 999:999 /var/run/postgresql && \
+                chmod 700 /var/run/postgresql && \
+                echo "Initialization complete."
+          volumeMounts:
+            - mountPath: /var/lib/postgresql/data
+              name: postgresqldata
+            - mountPath: /var/run/postgresql
+              name: postgresql-run
       containers:
         - name: postgresql
           image: postgres:14-alpine
@@ -26,14 +46,30 @@ spec:
               value: root
             - name: TZ
               value: America/New_York
+          securityContext:
+            runAsUser: 999
+            runAsGroup: 999
+            allowPrivilegeEscalation: false
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
-              name: azurefile
+              name: postgresqldata
+            - mountPath: /docker-entrypoint-initdb.d
+              name: postgres-cm0
+              readOnly: true
+            - mountPath: /etc/postgresql
+              name: config-postgres
+              readOnly: true
             - mountPath: /var/run/postgresql
               name: postgresql-run
       volumes:
-        - name: azurefile
+        - name: postgresqldata
           persistentVolumeClaim:
-            claimName: azurefile
+            claimName: postgresqldata
+        - name: postgres-cm0
+          configMap:
+            name: postgres-cm0
+        - name: config-postgres
+          configMap:
+            name: postgres-cm1
         - name: postgresql-run
           emptyDir: {}
