--- a/volumes/postgresqldata-persistentvolume.yaml
+++ b/volumes/postgresqldata-persistentvolume.yaml
@@ -15,7 +15,7 @@ spec:
     driver: file.csi.azure.com
     volumeHandle: "PowerPlatform-IOTReporting-dev#usiotreportingdev#us-chirpstack-postgres-data"
     volumeAttributes:
-      shareName: 
+      shareName: us-chirpstack-postgres-pv
     nodeStageSecretRef:
       name: azure-file-secret
       namespace: default
