--- a/deployments/postgres-deployment.yaml
+++ b/deployments/postgres-deployment.yaml
@@ -13,18 +13,17 @@ spec:
         io.kompose.service: postgresql
     spec:
       securityContext:
-        fsGroup: 0
+        fsGroup: 999
       initContainers:
         - name: init-postgres
           image: alpine:latest
           securityContext:
-            runAsUser: 0
+            runAsUser: postgres
           command:
             - sh
             - -c
             - |
                 echo "Cleaning up /var/lib/postgresql/data..."
-                useradd -u 999 postgres
                 rm -rf /var/lib/postgresql/data/* && \
                 mkdir -p /var/lib/postgresql/data && \
                 chown -R 999:999 /var/lib/postgresql/data && \
