--- a/deployments/postgres-deployment.yaml
+++ b/deployments/postgres-deployment.yaml
@@ -49,7 +49,7 @@ spec:
           securityContext:
             runAsUser: 0
             runAsGroup: 999
-            allowPrivilegeEscalation: false
+            allowPrivilegeEscalation: true
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
               name: postgresqldata
