--- a/deployments/postgres-deployment.yaml
+++ b/deployments/postgres-deployment.yaml
@@ -35,7 +35,7 @@ spec:
                 echo "Initialization complete."
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
-              name: postgresqldata
+              name: private-azurefile-pvc  # Updated PVC reference
             - mountPath: /var/run/postgresql
               name: postgresql-run
       containers:
@@ -54,7 +54,7 @@ spec:
             allowPrivilegeEscalation: true
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
-              name: postgresqldata
+              name: private-azurefile-pvc  # Updated PVC reference
             - mountPath: /docker-entrypoint-initdb.d
               name: postgres-cm0
               readOnly: true
@@ -64,9 +64,9 @@ spec:
             - mountPath: /var/run/postgresql
               name: postgresql-run
       volumes:
-        - name: postgresqldata
+        - name: private-azurefile-pvc  # Use the new PVC name
           persistentVolumeClaim:
-            claimName: postgresqldata
+            claimName: private-azurefile-pvc  # Reference to the PVC created using Azure Files
         - name: postgres-cm0
           configMap:
             name: postgres-cm0
