--- a/volumes/postgresqldata-persistentvolumeclaim.yaml
+++ b/volumes/postgresqldata-persistentvolumeclaim.yaml
@@ -1,11 +1,16 @@
 apiVersion: v1
-kind: PersistentVolumeClaim
+kind: PersistentVolume
 metadata:
-  name: private-azurefile-pvc
+  name: private-azurefile-pv
 spec:
+  capacity:
+    storage: 100Gi
+  volumeMode: Filesystem
   accessModes:
     - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
   storageClassName: private-azurefile-csi
-  resources:
-    requests:
-      storage: 100Gi
+  azureFile:
+    secretName: azure-file-secret
+    shareName: us-chirpstack-postgres-data
+    readOnly: false
