--- a/deployments/postgres-deployment.yaml
+++ b/deployments/postgres-deployment.yaml
@@ -66,6 +66,9 @@ spec:
             - mountPath: /var/run/postgresql
               name: postgresql-run
       volumes:
+        - name: postgresqldata
+          persistentVolumeClaim:
+            claimName: postgresqldata
         - name: postgres-cm0
           configMap:
             name: postgres-cm0
@@ -75,13 +78,4 @@ spec:
         - name: postgresql-run
           emptyDir: {}
 
-  volumeClaimTemplates:
-    - metadata:
-        name: postgresqldata
-      spec:
-        accessModes:
-          - ReadWriteMany
-        resources:
-          requests:
-            storage: 100Gi
-        storageClassName: azurefile-csi-nfs
+  volumeClaimTemplates: []
